<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ScrobbleSettingsWidget</class>
 <widget class="QWidget" name="ScrobbleSettingsWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>300</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QLabel" name="label">
       <property name="text">
        <string>Scrobble at</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QSlider" name="scrobblePoint">
       <property name="minimum">
        <number>50</number>
       </property>
       <property name="maximum">
        <number>100</number>
       </property>
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="tickPosition">
        <enum>QSlider::TicksBelow</enum>
       </property>
       <property name="tickInterval">
        <number>10</number>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLabel" name="percentText">
       <property name="text">
        <string>50</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLabel" name="label_3">
       <property name="text">
        <string>percent of the track</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QCheckBox" name="podcasts">
     <property name="text">
      <string>Scrobble podcasts</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QCheckBox" name="audiobooks">
     <property name="text">
      <string>Scrobble audiobooks</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QFrame" name="line">
     <property name="frameShape">
      <enum>QFrame::StyledPanel</enum>
     </property>
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QCheckBox" name="allowFingerprint">
     <property name="text">
      <string>Allow Last.fm to fingerprint my tracks</string>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
